--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/price/final_price.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/price/final_price.phtml
@@ -24,7 +24,7 @@ $schema = ($block->getZone() == 'item_view') ? true : false;
                 'schema' => $schema
             ]); ?>
         </span>
-        <s class="old-price text-gray-500">
+        <s class="old-price">
             <?= /* @noEscape */ $block->renderAmount($priceModel->getAmount(), [
                 'price_id'          => $block->getPriceId('old-price-' . $idSuffix),
                 'price_type'        => 'oldPrice',
@@ -46,11 +46,11 @@ $schema = ($block->getZone() == 'item_view') ? true : false;
 
     <?php if ($block->showMinimalPrice()) :?>
         <?php if ($block->getUseLinkForAsLowAs()) :?>
-            <a href="<?= $block->escapeUrl($block->getSaleableItem()->getProductUrl()) ?>" class="minimal-price-link text-gray-500">
+            <a href="<?= $block->escapeUrl($block->getSaleableItem()->getProductUrl()) ?>" class="minimal-price-link">
                 <?= /* @noEscape */ $block->renderAmountMinimal() ?>
             </a>
         <?php else :?>
-            <span class="minimal-price-link text-gray-500">
+            <span class="minimal-price-link">
                 <?= /* @noEscape */ $block->renderAmountMinimal() ?>
             </span>
         <?php endif?>
