INTERNAL-27; add w-full class to 'tax' span

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/element/_price-element.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/element/_price-element.phtml
@@ -84,9 +84,9 @@ $customOptionPrices = [];
         <?php endif; ?>
 
         <?php if ($productPriceViewModel->displayPriceIncludingTax()): ?>
-            <div class="text-nowrap text-[14px]"><?= __('Tax included.') ?></div>
+            <div class="text-nowrap text-[14px] w-full"><?= __('Tax included.') ?></div>
         <?php elseif($productPriceViewModel->displayPriceInclAndExclTax()): ?>
-            <div class="text-nowrap text-[14px]"><?= __('Tax excluded.') ?></div>
+            <div class="text-nowrap text-[14px] w-full"><?= __('Tax excluded.') ?></div>
         <?php endif; ?>
 
         <?php if (!empty($customOptionPrices)): ?>
