--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/breadcrumbs.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/breadcrumbs.phtml
@@ -1,84 +1,113 @@
 <?php
 
+use Hyva\Theme\Model\ViewModelRegistry;
 use Hyva\Theme\ViewModel\SvgIcons;
 use Magento\Framework\Escaper;
-use Hyva\Theme\Model\ViewModelRegistry;
+use Magento\Theme\Block\Html\Breadcrumbs;
 
+/** @var Breadcrumbs $block */
 /** @var ViewModelRegistry $viewModels */
 /** @var Escaper $escaper */
 /** @var SvgIcons $hyvaicons */
 $hyvaicons = $viewModels->require(SvgIcons::class);
 
-// TODO: Make dynamic
-$isAlpineTemplate = false;
-
+$isAlpineTemplate = $block->getData('isAlpineTemplate');
 $pageType = $this->getRequest()->getFullActionName();
 $mobilePageTypes = ['catalog_category_view', 'catalog_product_view', 'catalogsearch_result_index'];
-$hideOnMobile = in_array($pageType, $mobilePageTypes);
+$hideOnMobile = in_array($pageType, $mobilePageTypes, true);
 ?>
 
-<?php if (!empty($crumbs) && is_array($crumbs)): ?>
+<?php if ($isAlpineTemplate): ?>
+  <nav
+    class="breadcrumbs content-wrapper mx-auto my-8 px-4 md:block"
+    role="navigation"
+    aria-label="<?= __('Breadcrumbs') ?>"
+  >
+    <div role="list" class="truncate px-2">
+      <div role="listitem" class="inline font-bold">
+        <a class="inline-flex hover:underline" x-element-transition-trigger
+           href="<?= $escaper->escapeUrl($block->getUrl('/')) ?>">
+          <?= __('Home') ?>
+        </a>
+      </div>
+
+      <div role="listitem" class="mx-4 inline-block" aria-hidden="true">
+        <?= $hyvaicons->renderHtml('breadcrumb-chevron'); ?>
+      </div>
+
+      <template x-if="$store['transition'].pageType === 'category'">
+        <div class="contents">
+          <template x-for="breadcrumb in $store['transition'].pageData?.breadcrumbs">
+            <div class="contents">
+              <div role="listitem" class="breadcrumb">
+                <a
+                  class="inline-flex hover:underline"
+                  x-element-transition-trigger
+                  aria-current="page"
+                  :href="breadcrumb?.url"
+                  x-text="breadcrumb?.title"
+                >
+                </a>
+              </div>
+              <div
+                role="listitem"
+                class="mx-4 inline-block"
+                aria-hidden="true"
+              >
+                <?= $hyvaicons->renderHtml('breadcrumb-chevron'); ?>
+              </div>
+            </div>
+          </template>
+          <div role="listitem" class="breadcrumb text-text-500" x-text="$store['transition'].pageData?.title"></div>
+        </div>
+      </template>
+
+      <template x-if="$store['transition'].pageType === 'product'">
+        <div class="contents">
+          <div role="listitem" class="breadcrumb text-text-500" x-text="$store['transition'].pageData?.title"></div>
+        </div>
+      </template>
+
+      <template x-if="$store['transition'].pageType === 'search'">
+        <div class="contents">
+          <div
+            x-data="{
+                searchTerm: $store['transition'].pageData?.search,
+                resultCount: $store['transition'].pageData?.resultCount,
+                text: '<?= __('%1 result found for "%2"') ?>',
+            }"
+            role="listitem"
+            class="breadcrumb text-text-500"
+            x-text="hyva.strf(text, resultCount, searchTerm)"
+          ></div>
+        </div>
+      </template>
+    </div>
+  </nav>
+<?php elseif (!empty($crumbs) && is_array($crumbs)): ?>
     <nav
         class="breadcrumbs content-wrapper mx-auto my-8 px-4 <?= $hideOnMobile ? 'hidden' : '' ?> md:block"
         role="navigation"
         aria-label="<?= __('Breadcrumbs') ?>"
     >
         <div role="list" class="truncate px-2">
-            <?php if ($isAlpineTemplate): ?>
-                <div role="listitem" class="inline font-bold">
-                    <a class="inline-flex hover:underline" x-element-transition-trigger href="<?= $escaper->escapeUrl($block->getUrl('/')) ?>">
-                        <?= __('Home') ?>
-                    </a>
-                </div>
-
-                <div role="listitem" class="mx-4 inline-block" aria-hidden="true">
-                    <?= $hyvaicons->renderHtml('breadcrumb-chevron'); ?>
-                </div>
-
-                <template x-if="$store['transition'].pageType === 'category'">
-                    <div class="contents">
-                        <div role="listitem" class="breadcrumb text-text-500" x-text="$store['transition'].pageData?.title"></div>
-                    </div>
-                </template>
-
-                <template x-if="$store['transition'].pageType === 'product'">
-                    <div class="contents">
-                        <div role="listitem" class="breadcrumb text-text-500" x-text="$store['transition'].pageData?.title"></div>
-                    </div>
-                </template>
-
-                <template x-if="$store['transition'].pageType === 'search'">
-                    <div class="contents">
-                        <div
-                            x-data="{
-                                searchTerm: $store['transition'].pageData?.search,
-                                resultCount: $store['transition'].pageData?.resultCount,
-                                text: '<?= __('%1 result found for "%2"') ?>',
-                            }"
-                            role="listitem"
-                            class="breadcrumb text-text-500"
-                            x-text="hyva.strf(text, resultCount, searchTerm)"
-                        ></div>
-                    </div>
-                </template>
-            <?php else: ?>
-                <?php foreach ($crumbs as $crumbName => $crumbInfo): ?>
-                    <?php if (!empty($crumbInfo['link'])): ?>
-                        <div role="listitem" class="breadcrumb" data-crumb-name="<?= $escaper->escapeHtmlAttr($crumbName) ?>">
-                            <a x-element-transition-trigger class="inline-flex hover:underline" href="<?= $escaper->escapeUrl($crumbInfo['link']) ?>" aria-current="page">
-                                <?= $escaper->escapeHtml($crumbInfo['label']) ?>
-                            </a>
-                        </div>
-                        <div role="listitem" class="mx-4 inline-block" aria-hidden="true">
-                            <?= $hyvaicons->renderHtml('breadcrumb-chevron'); ?>
-                        </div>
-                    <?php elseif (!empty($crumbInfo['last'])): ?>
-                        <div role="listitem" class="breadcrumb text-text-500">
-                            <?= $escaper->escapeHtml($crumbInfo['label']) ?>
-                        </div>
-                    <?php endif; ?>
-                <?php endforeach; ?>
+          <?php foreach ($crumbs as $crumbName => $crumbInfo): ?>
+            <?php if (!empty($crumbInfo['link'])): ?>
+              <div role="listitem" class="breadcrumb" data-crumb-name="<?= $escaper->escapeHtmlAttr($crumbName) ?>">
+                <a x-element-transition-trigger class="inline-flex hover:underline"
+                   href="<?= $escaper->escapeUrl($crumbInfo['link']) ?>" aria-current="page">
+                  <?= $escaper->escapeHtml($crumbInfo['label']) ?>
+                </a>
+              </div>
+              <div role="listitem" class="mx-4 inline-block" aria-hidden="true">
+                <?= $hyvaicons->renderHtml('breadcrumb-chevron'); ?>
+              </div>
+            <?php elseif (!empty($crumbInfo['last'])): ?>
+              <div role="listitem" class="breadcrumb text-text-500">
+                <?= $escaper->escapeHtml($crumbInfo['label']) ?>
+              </div>
             <?php endif; ?>
+          <?php endforeach; ?>
         </div>
     </nav>
 <?php endif; ?>
