INTERNAL-27; 'From' instead of 'As low as'

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/element/_price-element.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/element/_price-element.phtml
@@ -73,7 +73,7 @@ $customOptionPrices = [];
             <?php endif; ?>
 
             <?php if ($tierPrices): ?>
-                <span class="sr-only"><?= __('As low as') ?></span>
+                <span class="sr-only"><?= __('From') ?></span>
                 <span class="text-primary-500">
                 <?= /** @noEscape */
                 $productViewModel->format($productPriceViewModel->getLowestTierPrice($tierPrices)) ?>
